syntax = "proto3";

import "google/protobuf/empty.proto";

package analytics;

option go_package = "github.com/morzhanov/go-realworld/api/rpc/analytics";

service Analytics {
  // Connect a client
  rpc LogData (LogDataRequest) returns (google.protobuf.Empty) {}

  // Get a log
  rpc GetLog (google.protobuf.Empty) returns (GetLogsMessage) {}
}

// Log data request
message LogDataRequest {
  string transport = 1;
  string service = 2;
  string method = 3;
}

// Analytics entry message
message AnalyticsEntryMessage {
  string transport = 1;
  string service = 2;
  string method = 3;
}

message GetLogsMessage {
  repeated AnalyticsEntryMessage logs = 1;
}
